fix navbar and table spacing

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -46,22 +46,10 @@ h2 {
   overflow: hidden;
 }
 
-// .navbar-brand {
-//   position: absolute;
-//   left: 16px;
-//   margin: -8px;
-// }
-
-// .navbar-right {
-//   position: absolute;
-//   right: 16px;
-//   top: -5px;
-// }
-
-// .navbar {
-//   //nav bar to table spacing
-//   margin-bottom: 15px;
-// }
+.navbar {
+  //nav bar to table spacing
+  margin-bottom: 16px;
+}
 
 .navbar-default .navbar-nav > li > a {
   color: #fff;
